2014-08-15  Gavin Smith  <gavinsmith0123@gmail.com>
	
	* info/session.c (match_in_match_list): Arguments changed.
	(info_search_in_node_internal): Function declared static.
	Arguments changed.  Remove node name search.
	(info_search_internal): Rewritten to have single call to
	info_search_in_node_internal.
	(info_target_search_node): Removed.
	(info_select_reference): Call updated.

	* info/footnotes.c (make_footnotes_node): Only search until end of
	node.

2014-08-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/search.c (regexp_escape_string): New function.
	(regexp_search): New argument controlling whether to search for string
	literally.  Callers updated.
	* info/session.c (info_search_in_node_internal): Call regexp_search
	function for literal searches.
	* info/footnotes.c (make_footnotes_node): Use strstr instead of
	info_search_in_node_internal.

2014-08-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_set_node_of_window): Clear search matches here
	instead of in window_set_node_of_window in window.c.
	(match_in_match_list): When searching backward, include the starting
	byte in the area.

	* info/window.h (SEARCH_STATE): Moved to session.c.  Store starting
	position of search instead of position of point.
	* info/window.c (window_get_state, window_set_state): Moved to
	session.c.
	* info/session.c (pop_isearch, push_isearch): Take extra argument to
	save and restore starting search position.
	(incremental_search): Save initial point position.  Clear search if
	search string is erased.

	* info/session.c (info_search_in_node_internal): Check search if
	forwards when setting search start to 'body_start'.

2014-08-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (incremental_search): Backspace always deletes last
	character in search pattern.  Do search again to update displayed
	highlights.

2014-08-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/search.c (regexp_search): Arguments changed.  Don't take