@@ -1,3 +1,9 @@
+2014-08-16  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* info/info.c (add_initial_nodes): Error message if --node used
+	without a filename being specified.
+	* info/t/node-no-file.sh: New test.
+
 2014-08-15  Gavin Smith  <gavinsmith0123@gmail.com>
 	
 	* info/session.c (match_in_match_list): Arguments changed.
